--- a/src/template/src/assets/global.scss
+++ b/src/template/src/assets/global.scss
@@ -34,6 +34,9 @@ body {
   min-height: 25px !important;
   padding: 2px 6px !important;
 }
+.ant-layout {
+  overflow-x: inherit !important;
+}
 // .sfx-upload-area,
 // .music-upload-area,
 // .voice-upload-area {
