--- a/src/template/src/layouts/Main/style.module.scss
+++ b/src/template/src/layouts/Main/style.module.scss
@@ -17,11 +17,11 @@
 }
 
 .light {
-  background: $white;
-  
+  background: #fafafa;
+
   :global(.ant-layout-sider-trigger) {
     color: inherit;
-    background: $white !important;
+    background: #fafafa !important;
   }
 }
 
