- added filedrive type. - try filter user.

--- a/src/template/src/components/LayoutComponents/Breadcrumbs/style.module.scss
+++ b/src/template/src/components/LayoutComponents/Breadcrumbs/style.module.scss
@@ -3,7 +3,7 @@
 .breadcrumbs {
   padding: rem(10) rem(20);
   background-color: $white;
-  border-bottom: 1px solid $gray-border;
+  // border-bottom: 1px solid $gray-border;
 }
 
 .path {
