change record page.

--- a/web/src/assets/global.scss
+++ b/web/src/assets/global.scss
@@ -89,3 +89,9 @@ body {
 .editable-add-btn {
   margin-bottom: 8px;
 }
+
+.ant-layout-sider-trigger {
+  background-color: #fafafa;
+  color: #aaa;
+  border-right: 1px solid #e2e8f0;
+}
